--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DB = mongodb+srv://Halee_portfolio:Halee@cluster0.fdchc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+CLOUD_NAME = vitamim
+API_KEY = 562993249483824
+API_SECRET = uo6dYnuiMvn-gOspPxvzA__28qo
