--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 DB = mongodb+srv://Halee_portfolio:Halee@cluster0.fdchc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MY_MONEY_DB = mongodb+srv://Halee_portfolio:Halee@cluster0.fdchc.mongodb.net/my_money?retryWrites=true&readPreference=secondary
 CLOUD_NAME = vitamim
 API_KEY = 562993249483824
 API_SECRET = uo6dYnuiMvn-gOspPxvzA__28qo
